<resources>
    <string name="app_name">GoalApp</string>
    <string name="select_currency">Hello! Select a currency of your preference!</string>
    <string name="start">Get Started</string>
    <string name="currency_btn">Select a Currency</string>
    <string name="noSaves">No Saving Goals.</string>
    <string name="goal_title">GOAL TITLE</string>
    <string name="new_goal">New Goal</string>
    <string name="Add_Goal">ADD GOAL</string>
    <string name="title_goal">Title</string>
    <string name="target_goal">Target</string>
    <string name="deadline">DeadLine</string>
    <string name="notes">Notes(Optional)</string>
    <string name="add_image">Add Image</string>
</resources>