<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/tv_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_currency"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/currencyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currency_btn"
        app:layout_constraintTop_toBottomOf="@id/tv_currency"
        app:layout_constraintEnd_toEndOf="@id/tv_currency"
        app:layout_constraintStart_toStartOf="@id/tv_currency"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/currency_btn"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/currencyButton"
        app:layout_constraintEnd_toEndOf="@id/currencyButton"
        app:layout_constraintStart_toStartOf="@id/currencyButton"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10sp"
        android:background="@drawable/start_btn"
        android:textColor="@color/white"
        />


</androidx.constraintlayout.widget.ConstraintLayout>