<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGoalActivity"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_goal"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/Cerulean"
        android:theme="@style/CustomToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ScrollView
        android:id="@+id/sv_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_add_goal">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="5dp"
                android:src="@drawable/add_screen_image_placeholder"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/add_image"
                android:background="@drawable/new_goal_btn"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="10dp"
                android:drawableLeft="@drawable/ic_baseline_add_a_photo_24"
                app:layout_constraintStart_toEndOf="@id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/til_title"
                />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/add_goal_title"
                android:theme="@style/CustomToolbarStyle"
                android:padding="5dp"
                android:layout_marginTop="15dp"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_goal"
                    android:inputType="textCapWords"
                    android:textColor="@color/black"
                    android:textColorHint="@color/CadetGray"
                    android:textSize="20sp"
                    android:padding="5dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_target"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_title"
                android:background="@drawable/add_goal_title"
                android:theme="@style/CustomToolbarStyle"
                android:padding="5dp"
                android:layout_marginTop="15dp"
                >
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_target"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/target_goal"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textColorHint="@color/CadetGray"
                android:textSize="20sp"
                android:padding="5dp"

                />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_deadLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/til_target"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="5dp"
                android:layout_marginTop="15dp"
                android:theme="@style/CustomToolbarStyle"
                android:background="@drawable/add_goal_title"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_deadLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/deadline"
                    android:textColor="@color/black"
                    android:textColorHint="@color/CadetGray"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_deadLine"
                android:background="@drawable/add_goal_title"
                android:theme="@style/CustomToolbarStyle"
                android:padding="5dp"
                android:layout_marginTop="15dp"

                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/notes"
                    android:inputType="textCapWords"
                    android:textColor="@color/black"
                    android:textColorHint="@color/CadetGray"
                    android:textSize="20sp"
                    android:padding="5dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SAVE"
                app:layout_constraintTop_toBottomOf="@id/til_notes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="30dp"
                android:background="@color/Aquamarine"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                />




        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>